css fix for alignment

--- a/src/pages/lyricsApp.css
+++ b/src/pages/lyricsApp.css
@@ -115,7 +115,6 @@
     padding: 18px;
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   .hint-message img {
